<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UAE TRA</string>
    <string name="title_activity_authorization">Authorization</string>
    <string name="register_title">Create Account</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="error_fill_all_fields">Please fill all fields</string>
    <string name="str_email">Email</string>
    <string name="str_language">Language Preference</string>
    <string name="str_fontsize">Font Size</string>
    <string name="str_themesoptions">Color Theme</string>
    <string name="str_about_tra">About TRA</string>
    <string name="str_read_more_about_tra">Read more about TRA</string>
    <string name="str_change_color_theme">Change color theme</string>
    <string name="str_color_impaired">Color Impaired</string>
    <string name="str_phone">Phone</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Password?</string>
    <string name="str_login">Login</string>
    <string name="str_register">Register</string>
    <string name="str_restore">Restore</string>
    <string name="str_small">Small</string>
    <string name="str_medium">Medium</string>
    <string name="str_large">Large</string>
    <string name="str_home">Home</string>
    <string name="str_favorites">Favourites</string>
    <string name="str_inquiries">Enquires</string>
    <string name="str_settings">Settings</string>
    <string name="complain">Complain about Service Provider</string>
    <string name="approved_devices">List Of Mobile Brands</string>
    <string name="device_approval">Result IMEI Code</string>
    <string-array name="languages">
        <item>English</item>
        <item>العربية</item>
    </string-array>
    <string name="str_domain_check">Domain Check</string>
    <string name="str_availabilty">Availability</string>
    <string name="str_whois">WHOIS</string>
    <string name="str_location">Location</string>
    <string name="str_signal_level">Coverage Level</string>
    <string name="str_signal_coverage">Coverage Level</string>
    <string name="str_enter_url">Enter URL</string>
    <string name="str_report_url">Report Website</string>
    <string name="str_description">Description</string>
    <string name="str_number_of_spammer">Number Of Spammer</string>
    <string name="str_sms_report_number">Report SMS Number</string>
    <string name="str_sms_block_number">Block Number</string>
    <string name="str_sms_service_list">SMS Service List</string>
    <string name="str_user_name">Jhon</string>
    <string name="str_insert_domain_name_here">Insert Domain Name Here</string>
    <string name="str_success">Success</string>
    <string name="str_error">Error</string>
    <string name="str_url_not_avail">The domain %s is not available</string>
    <string name="str_url_doesnot_exist">The %s does not exist</string>
    <string name="str_invalid_url">Please enter a valid URL</string>
    <string name="str_invalid_number">Please enter a valid number</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_one_empty_space"> </string>
    <string name="str_empty"></string>
    <string name="str_domain_available">Domain is Available</string>
    <string name="str_domain_not_available">NOT AVAILABLE</string>
    <string name="str_domain_availability">Domain Availability</string>
    <string name="str_domain_no_information">No information</string>
    <string name="str_domain_info">Domain Info</string>
    <string name="str_request_failed">Request Failed</string>
    <string name="str_something_went_wrong">Something went wrong</string>
    <string name="str_registering">Registration..</string>
    <string name="str_checking">Checking..</string>
    <string name="str_sending">Sending..</string>
    <string name="str_restoring">Restoring...</string>
    <string name="str_loading">Loading...</string>
    <string name="str_authenticating">Authenticating...</string>
    <string name="str_restore_pass_mail">We\'ll send an email</string>
    <string name="str_report_has_been_sent">Report has been successfully sent. Thank you.</string>
    <string name="str_data_has_been_sent">Signal level has been successfully reported. Thank you.</string>
    <string name="str_rating_has_been_sent">Rating has been successfully reported. Thank you.</string>
    <string name="str_complain_has_been_sent">Complaint has been successfully sent. Thank you.</string>
    <string name="str_info_hub">Info Hub</string>
    <string name="str_info_hub_title">Info Hub</string>
    <string name="str_info_hub_announcements">Info Hub Announcements</string>
    <string name="str_info_hub_announcement_details">Info Hub Details</string>
    <string name="str_location_is_not_defined">Could not determine location. Please enter your location manually.</string>
    <string name="str_location_error">Enter Location</string>
    <string name="str_location_error_message">Please wait while location is determined or enter address manually.</string>
    <string name="signal_level_error">Please set signal level</string>
    <string name="str_mobile_verification">Device Verification</string>
    <string name="str_announcements">Announcements</string>
    <string name="str_transactions">Transactions</string>
    <string name="str_see_more">See More</string>
    <string name="str_select_service_provider">Select service provider</string>
    <string name="str_select_location_type">Select location type</string>
    <string name="str_camera_is_not_available">Camera isn\'t available</string>
    <string name="str_dummy_info_hub_list_item_descr">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and...
    </string>
    <string name="str_dummy_info_hub_list_item_full_descr">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        \r\n\r
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="str_dummy_info_hub_list_item_date">08/09/2015</string>
    <string name="str_dummy_info_hub_list_item_title">Title</string>
    <string name="fragment_service_info_service_info">About the Service</string>
    <string name="fragment_service_info_required_documents">Required Documents</string>
    <string name="fragment_service_info_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="fragment_service_info_service_package">Service Package</string>
    <string name="fragment_service_info_processing_time">Expected Time</string>
    <string name="fragment_service_info_service_fees">Service Fees</string>
    <string name="fragment_service_info_contact_in_charge">Officer in Charge of this Service</string>
    <string name="fragment_favorites_empty_favorites">You have not selected a TRA\nservice as part of your\nFavorites list yet.</string>
    <string name="fragment_favorites_add_service">ADD A SERVICE</string>
    <string name="operator_number">Operator Number</string>
    <string name="service_provider">Service Provider</string>
    <string name="number_of_spammer">Spammer Number</string>
    <string name="description">Description</string>
    <string name="complain_title">Title</string>
    <string name="reference_number">Reference Number</string>
    <string name="content_description_add_attachment">Add Attachment</string>
    <string name="approved_device_information">Approved Device Information</string>
    <string name="insert_imei_hint">Device IMEI</string>
    <string name="hint_set_server_url">Set server url</string>
    <string name="button_change_server">Change server</string>
    <string name="favourite_service_info">Service Info</string>
    <string name="favourite_remove">Remove</string>
    <string name="federal_authority">Federal Authority</string>
    <string name="hexagon_button_verification">Verification</string>
    <string name="hexagon_button_spam">Spam Report</string>
    <string name="hexagon_button_coverage">Coverage</string>
    <string name="hexagon_button_internet">Internet</string>
    <string name="hexagon_button_domain_check">Domain Check</string>
    <string name="fragment_favorites_add_service_done">Done</string>
    <string name="fragment_favorites_add_service_search">Search</string>
    <string name="fragment_favorites_menu_add">Add service</string>
    <string-array name="fragment_poor_coverage_signal_levels">
        <item>Very Weak</item>
        <item>Weak</item>
        <item>Good</item>
        <item>Strong</item>
        <item>Very Strong</item>
    </string-array>
    <string name="service_complain_about_provider">Complain about Service Provider</string>
    <string name="service_complain_about_tra">Complain about TRA</string>
    <string name="service_suggestion">Suggestion</string>
    <string name="service_domain_check">Domain Check</string>
    <string name="service_enquiries">Enquiries</string>
    <string name="service_sms_spam">Spam Report</string>
    <string name="service_poor_coverage">Poor Coverage</string>
    <string name="service_help_salim">Help Salim</string>
    <string name="service_mobile_verification">Device Verification</string>
    <string name="service_approved_devices">Mobile Brand</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_emirates_id">784-YYYY-NNNNNNN-C</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_address">Address</string>
    <string name="hint_landline">Landline</string>
    <string name="error_valid_email">Please enter valid email address</string>
    <string name="error_valid_phone">Please enter valid phone number</string>
    <string name="error_password_confirm">Password and confirm password must be same</string>
    <string name="error_select_state">Please select your state</string>
    <string name="error_no_network">Network is not available. Please check your internet connection</string>
    <string name="error_conversion_error">Server returned wrong format of data</string>
    <string name="fragment_edit_user_profile_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="fragment_edit_user_profile_reset">RESET</string>
    <string name="fragment_edit_user_profile_confirm">SAVE CHANGES</string>
    <string name="fragment_reset_password_reset_title">Reset Password</string>
    <string name="fragment_reset_password_reset_info">To reset your password, please type your email in the field below and a temporary password will be sent tou you.</string>
    <string name="fragment_reset_password_email">EMAIL</string>
    <string name="fragment_reset_password_retype_email">RETYPE YOUR EMAIL</string>
</resources>