<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:ignore="HardcodedText,RtlSymmetry">

    <ImageView
        android:id="@+id/ivAddAttachment_FCAT"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/content_description_add_attachment"
        android:scaleType="centerInside"
        android:src="@drawable/ic_action_attachment"/>

    <EditText
        android:id="@+id/etComplainTitle_FCAT"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/ivAddAttachment_FCAT"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/complain_title"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <View
        android:id="@+id/vComplainTitleDivider_FCAT"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/etComplainTitle_FCAT"
        android:background="@android:drawable/divider_horizontal_textfield"/>

    <EditText
        android:id="@+id/etDescription_FCAT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/vComplainTitleDivider_FCAT"
        android:background="@null"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textAutoCorrect|textMultiLine"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

</RelativeLayout>