<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hex_authorization_background_color"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hex_authorization_background_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llSignInFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEmail_FLI"
                style="@style/UserAuthorizationDataEditTextField"
                android:drawableLeft="@drawable/ic_temp_left_field_icon"
                android:hint="@string/str_email"
                android:inputType="textPersonName" />

            <View style="@style/AuthorizationFieldsSeparator" />

            <EditText
                android:id="@+id/etPassword_FLI"
                style="@style/UserAuthorizationDataEditTextField"
                android:drawableLeft="@drawable/ic_temp_left_field_icon"
                android:hint="@string/str_password"
                android:inputType="text" />

            <View style="@style/AuthorizationFieldsSeparator" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignInActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRestorePassword_FLI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llSignInFields"
                android:autoLink="all"
                android:gravity="center"
                android:padding="@dimen/dp_forgot_pass_static_text_padding"
                android:text="@string/str_forgot_password"
                android:textColor="@color/hex_auth_static_text_color"
                android:textSize="@dimen/sp_authorization_button_text_size" />

            <Button
                android:id="@+id/btnLogIn_FLI"
                style="@style/BlurButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRestorePassword_FLI"
                android:text="@string/str_login" />

            <TextView
                android:id="@+id/tvRegisterNow_FLI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llSignInFields"
                android:autoLink="all"
                android:gravity="center"
                android:padding="@dimen/dp_register_now_static_text_padding"
                android:text="@string/str_register_now"
                android:textColor="@color/hex_primary_orange"
                android:textSize="@dimen/sp_authorization_button_text_size" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>