<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:ignore="SmallSp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="?attr/userProfileBackground"
        tools:ignore="ContentDescription"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.uae.tra_smart_services.customviews.HexagonView
                android:id="@+id/hvUserAvatar_FRP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                app:hexagonBackgroundColor="@color/hex_dark_blue"
                app:hexagonBorderColor="@android:color/white"
                app:hexagonBorderSize="2dp"
                app:hexagonSideSize="48dp"/>

            <TextView
                android:id="@+id/tvResetPassword_FRP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hvUserAvatar_FRP"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/fragment_reset_password_reset_title"
                android:textColor="#455560"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvResetPasswordInfo_FRP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvResetPassword_FRP"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="36dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/fragment_reset_password_reset_info"
                android:textColor="@color/fragment_user_profile_text_color_primary"
                android:textSize="12sp"
                app:layout_widthPercent="90%"/>

            <TextView
                android:id="@+id/tvEmailHint_FRP"
                style="@style/EditUserProfileEditTextHintStyle"
                android:layout_below="@id/tvResetPasswordInfo_FRP"
                android:text="@string/fragment_reset_password_email"/>

            <EditText
                android:id="@+id/etEmail_FRP"
                style="@style/EditUserProfileEditTextStyle"
                android:layout_below="@id/tvEmailHint_FRP"
                android:inputType="textEmailAddress"
                tools:text="maher.almulla@tra.gov.ae"/>

            <View
                android:id="@+id/vEmailDivider_FRP"
                style="@style/UserProfileDivider"
                android:layout_below="@id/etEmail_FRP"/>

            <TextView
                android:id="@+id/tvEmailRetypeHint_FRP"
                style="@style/EditUserProfileEditTextHintStyle"
                android:layout_below="@id/vEmailDivider_FRP"
                android:layout_marginTop="16dp"
                android:text="@string/fragment_reset_password_retype_email"/>

            <EditText
                android:id="@+id/etEmailRetype_FRP"
                style="@style/EditUserProfileEditTextStyle"
                android:layout_below="@id/tvEmailRetypeHint_FRP"
                android:inputType="textEmailAddress"
                tools:text="maher.almulla@tra.gov.ae"/>

            <View
                android:id="@+id/vEmailRetypeDivider_FRP"
                style="@style/UserProfileDivider"
                android:layout_below="@id/etEmailRetype_FRP"/>

        </android.support.percent.PercentRelativeLayout>

    </ScrollView>
</FrameLayout>