<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="?attr/userProfileBackground"
        tools:ignore="ContentDescription"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:id="@+id/llSignInFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tvDomainAvail_FDCH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:hint="@string/str_insert_domain_name_here"
                    android:inputType="textUri|textAutoComplete"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:singleLine="true"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHint="?attr/colorPrimary"
                    android:textSize="18sp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"/>

                <View style="@style/AuthorizationFieldsSeparator"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSignInActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAvail_FDCH"
                    style="@style/AuthorizationButtons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_availabilty"/>

                <Button
                    android:id="@+id/btnWhoIs_FDCH"
                    style="@style/AuthorizationButtons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_whois"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>