<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false">
    <!--tools:showIn="@layout/fragment_edit_user_profile">-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:background="#20d43f3f">

        <com.uae.tra_smart_services.customviews.HexagonView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hvCancel_LPC"
            android:layout_gravity="center_horizontal"
            app:hexagonBorderColor="?profileControllerCancelColor"
            app:hexagonSrcTintColor="?profileControllerCancelColor"
            app:hexagonBorderSize="1dp"
            app:hexagonSideSize="36dp"
            app:hexagonSrc="@drawable/ic_cancel"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_edit_user_profile_cancel"
            android:textColor="?profileControllerCancelColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:background="#20717d84">

        <com.uae.tra_smart_services.customviews.HexagonView
            android:layout_width="wrap_content"
            android:id="@+id/hvReset_LPC"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:hexagonBorderColor="?profileControllerResetColor"
            app:hexagonSrcTintColor="?profileControllerResetColor"
            app:hexagonBorderSize="1dp"
            app:hexagonSideSize="36dp"
            app:hexagonSrc="@drawable/ic_reset"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_edit_user_profile_reset"
            android:textColor="?profileControllerResetColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:background="#203cbb4b">

        <com.uae.tra_smart_services.customviews.HexagonView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/hvConfirm_LPC"
            app:hexagonBorderColor="?profileControllerSaveColor"
            app:hexagonSrcTintColor="?profileControllerSaveColor"
            app:hexagonBorderSize="1dp"
            app:hexagonSideSize="36dp"
            app:hexagonSrc="@drawable/ic_confirm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:maxLength="12"
            android:text="@string/fragment_edit_user_profile_confirm"
            android:textColor="?profileControllerSaveColor"/>

    </LinearLayout>

</merge>